tests/specs/test/no_run/main.out
Check [WILDCARD]/main.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _value: string = 1;
      ~~~~~~
    at [WILDCARD]/main.ts:1:7
